--- a/webserver/templates/record_trip.html
+++ b/webserver/templates/record_trip.html
@@ -19,7 +19,7 @@
       border: none;
       outline: none;
       cursor: pointer;
-      padding: 10px 280px;
+      padding: 10px 200px;
       font-size: 17px;
       width: 25%;
   }
@@ -42,6 +42,7 @@
   <button class="tablink"><a href="/search_info">search flight</a></button>
   <button class="tablink"><a href="/detail_info">detail info</a></button>
   <button class="tablink"><a href="/record_trip">rate trip</a></button>
+  <button class="tablink"><a href="/user_detail">user detail</a></button>
 </div>
 <br/>
 <br/>
