--- a/webserver/templates/search_info.html
+++ b/webserver/templates/search_info.html
@@ -21,7 +21,7 @@ body, html {
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 10px 280px;
+    padding: 10px 200px;
     font-size: 17px;
     width: 25%;
 }
@@ -48,6 +48,7 @@ body, html {
   <button class="tablink"><a href="/search_info">search flight</a></button>
   <button class="tablink"><a href="/detail_info">detail info</a></button>
   <button class="tablink"><a href="/record_trip">rate trip</a></button>
+  <button class="tablink"><a href="/user_detail">user detail</a></button>
 </div>
 <br/>
 <br/>
